# sqlx-rus-bug

./: Cargo.toml
src/: main.rs
